--- a/css/product.css
+++ b/css/product.css
@@ -6,13 +6,34 @@
 .rightHead .topic {
     text-align: center;
 }
+
+.pdetail{
+   
+}
 .nameImg{
     display:flex;
   justify-content: space-around;
     align-items: center ;
+    width:100%;
+    height:100%;
+ 
 }
+.img{
+    width:fit-content;
+    max-height: 600px;
+   
+   border-radius: 8px;
+    overflow: hidden;
+}
+
+.nameimg{
+   
+  
+}
+
+
 .nameImg img{
-    width:400px;
+    width:500px;
     border-radius:16px; 
    box-shadow: 5px 3px 18px 0px #888888;
 }
