--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@
     display:flex;
     border-radius:12px;
     box-shadow: 0px 10px 100px 0px #888888;
+    overflow: hidden;
     
 }
 .container .innercontainer .left{
