--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+*{padding:0px;margin:0px;}
 *::-webkit-scrollbar {
     display: none;
   }
@@ -9,30 +10,32 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    
+
 }
 
 .container .innercontainer {
-    height:85%;
-    width:90%;
+    height:95%;
+    width:95%;
     background-color: rgb(248, 248, 248);
     display:flex;
     border-radius:12px;
     box-shadow: 0px 10px 100px 0px #888888;
-    overflow: hidden;
+    
     
 }
 .container .innercontainer .left{
-    width:30%;
+   width: 15%;
     height:100%;
     
-    background-color: rgb(255, 252, 252);
+    
     border-bottom-left-radius: 12px;
     border-top-left-radius: 12px;
     display:flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 5px 3px 18px 0px #888888;
+    box-shadow: 5px 3px 18px 0px
+   
 }
 
 /*Inside left*/
@@ -44,6 +47,7 @@
     color:rgb(9, 5, 42);
     font-family: fantasy;
     font-size: 10px;
+    margin-top:20px;
 }
 .container .innercontainer .left .name h1{
     margin-right:2vw;
@@ -78,6 +82,8 @@
 .right{
     width:90%;
     margin-left:10px;
+    overflow: scroll;
+    box-shadow: 5px 3px 18px 0px
  
 
 }
@@ -88,7 +94,6 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 5px 3px 18px 0px #888888;
-   
 }
 
 
@@ -138,7 +143,12 @@
     border-radius: 8px;
 }
 
-
+.tocenter{
+    width:99%;
+  
+    display: flex;
+    justify-content: center;
+}
 
 
 .container .innercontainer .right .intro {
@@ -195,28 +205,35 @@
 }
 
 .container .innercontainer .right .intro .productdetail{
-    width:100%;
-
+  
 }
 
 
 .products{
     display: flex;
-    overflow-x: scroll;
+    flex-wrap: wrap;
+    
+
+    width:98%;
+    justify-content: space-around;
 }
 
 .products .product{
-    height:350px;
-    width:500px;
+    height:55vh;
+    width:100%;
    border-radius: 8px;
-   
-    display: flex;
-   
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+
+   justify-content: space-around;
     flex-wrap: wrap;
   
     justify-content: center;
-    margin:20px;
+    margin-top:20px;
     box-shadow: 5px 3px 18px 0px #888888;
+    overflow:hidden;
+   
     
     
 }
@@ -228,10 +245,28 @@
    
     display:flex;
     justify-content: center;
-
+    background-color: #000000;
     overflow:hidden;
 }
 
-.intro .product .img img{
-    border-radius: 8px;
+.products .product .img img{
+    opacity: 0.7;
+    transition: 0.5s;
+}
+.products .product .img img:HOVER{
+    opacity: 1;
+    transition: 0.5s;
+}
+.products .product .detail{
+width:100%;
+   
+   text-align: center;
+
+}
+
+.right a{
+   text-decoration: none;
+   color:rgb(1, 58, 42);
+   
+   
 }
