--- a/css/index.css
+++ b/css/index.css
@@ -44,7 +44,7 @@
     width:100%;
 
     justify-content: end;
-    color:rgb(9, 5, 42);
+    color:rgb(15, 11, 49);
     font-family: fantasy;
     font-size: 10px;
     margin-top:20px;
@@ -63,7 +63,7 @@
 
 
 .left .innerLeft a{
-  color:black;
+  color:rgb(49, 7, 7);
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 16px;
   text-decoration: none;
@@ -83,7 +83,8 @@
     width:90%;
     margin-left:10px;
     overflow: scroll;
-    box-shadow: 5px 3px 18px 0px
+    box-shadow: 5px 3px 18px 0px;
+    border-radius: 0px 8px 0px 0px;
  
 
 }
@@ -120,7 +121,7 @@
 }
 
 
-
+.nav{display: none;}
 
 .right .header .extra a{
     font-family: 40px;
@@ -170,7 +171,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width:35%;
+    width:25%;
     height:100%;
     overflow:hidden;
    
@@ -193,16 +194,8 @@
    background-color: rgb(37, 37, 37);
     border-radius: 8px;
 }
-.container .innercontainer .right .intro .image img{
+.container .innercontainer .right  .intro .image img{width:90%;border-radius: 8px;box-shadow: 3px 3px 18px 0px #888888;}
 
-    width:90%;
-    border-radius: 8px;
-    box-shadow: 5px 3px 18px 0px #888888;
-  
-   
-   
-
-}
 
 .container .innercontainer .right .intro .productdetail{
   
@@ -214,7 +207,7 @@
     flex-wrap: wrap;
     
 
-    width:98%;
+    width:95%;
     justify-content: space-around;
 }
 
@@ -239,7 +232,7 @@
 }
 
 .products .product .img{
-    height:90%;
+    height:80%;
     width:90%;
    border-radius: 8px;
    
@@ -251,11 +244,12 @@
 
 .products .product .img img{
     opacity: 0.7;
-    transition: 0.5s;
+
 }
 .products .product .img img:HOVER{
     opacity: 1;
     transition: 0.5s;
+  
 }
 .products .product .detail{
 width:100%;
@@ -266,7 +260,7 @@ width:100%;
 
 .right a{
    text-decoration: none;
-   color:rgb(1, 58, 42);
+   color:rgb(9, 5, 42);
    
    
 }
