--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@
 
 .container .innercontainer {
     height:95%;
-    width:95%;
+    width:97%;
     background-color: rgb(248, 248, 248);
     display:flex;
     border-radius:12px;
@@ -75,7 +75,9 @@
 
 }
 
-
+.left .settingsOptions{
+ 
+}
 
 
 /*starts from here*/
@@ -85,6 +87,8 @@
     overflow: scroll;
     box-shadow: 5px 3px 18px 0px;
     border-radius: 0px 8px 0px 0px;
+    scroll-behavior: smooth;
+   
  
 
 }
@@ -95,6 +99,14 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 5px 3px 18px 0px #888888;
+    position: relative;
+    top: 0;
+    right: 0;
+   
+    width: 100%;
+    
+
+
 }
 
 
