--- a/css/forms.css
+++ b/css/forms.css
@@ -13,7 +13,7 @@ body{
     color:rgb(11, 11, 11);
     background-image: linear-gradient(red, yellow);
     display: flex;
-   justify-content: right;
+   justify-content: center;
    
 }
 body{ background-image: linear-gradient(red, yellow);
