--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,7 @@
     height: 100vh;
     background-color: rgb(238, 232, 232);
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     
@@ -26,10 +27,11 @@
 }
 
 .container .innercontainer {
-    height:95%;
-    width:97%;
+    height:99%;
+    width:99%;
     background-color: rgb(248, 248, 248);
     display:flex;
+
     
     border-radius:12px;
     box-shadow: 0px 10px 100px 0px #888888;
@@ -37,9 +39,9 @@
     
 }
 .container .innercontainer .left{
-   width: 15%;
+   min-width: 160px;
     height:100%;
-    
+
     
     border-bottom-left-radius: 12px;
     border-top-left-radius: 12px;
@@ -117,7 +119,7 @@
         border-radius: 12px;
         z-index:1;
         align-items: center;
-        jbox-shadow: 5px 3px 18px 0px #888888;
+        box-shadow: 5px 3px 18px 0px #888888;
         
       
     }
@@ -215,6 +217,7 @@
     min-width:1000px;
     height:auto;
    display:flex;
+   flex-wrap: wrap;
    
     background-color: rgb(255, 255, 255);
     margin-top: 10px;
@@ -281,7 +284,7 @@
     flex-wrap: wrap;
   
     justify-content: center;
-    margin-top:20px;
+    margin:20px;
     
     box-shadow: 5px 3px 18px 0px #000000;
     overflow:hidden;
