--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,7 @@
 }
 
 .left .innerLeft ul li{
-    margin-top: 9vh;
+    margin-top: 1vh;
     margin-bottom: 9vh;
 
 }
@@ -103,24 +103,15 @@
 .left .settingsOptions{
  
 }
+.fa-solid {
+    position: relative;
+}
 .left .setting-lists{
     display:none;
 }
 .left #setting:hover .setting-lists{
    
    
-        display:flex;
-        flex-direction: column;
-        margin-top:0px;
-        margin-left:-5%;
-        position:absolute;
-        background-color: rgb(255, 252, 252);
-        border-bottom-left-radius: 12px;
-        border-radius: 12px;
-        z-index:1;
-        align-items: center;
-        box-shadow: 5px 3px 18px 0px #888888;
-        
       
     }
 
